# playground

./: .gitignore  CMakeLists.txt  README.md
archive/newsletter_3/: rb_pitrex_window.h  rb_platform.c  rb_sdl.h
archive/newsletter_4/: rb_draw.h  rb_input.h
archive/newsletter_5/base/: rb_platform.h
archive/newsletter_5/engine3d/: rb_engine.cpp  rb_engine.hpp  rb_level.cpp  rb_math.cpp  rb_math.hpp  rb_mesh.hpp  rb_object.cpp
archive/newsletter_5/game/: game_vexxon.cpp
archive/newsletter_5/pitrex/: Makefile  rb_pitrex_main.cpp  rb_pitrex_platform.c
archive/newsletter_5/playground/: CMakeLists.txt
archive/newsletter_5/playground/src/: rb_sdl.cpp
archive/newsletter_6/base/: rb_platform.h  rb_vtext.c  rb_vtext.h
archive/newsletter_6/engine3d/: rb_engine.cpp  rb_object.cpp
archive/newsletter_6/game/: game_vexxon.cpp
archive/newsletter_6/pitrex/: rb_pitrex_main.cpp
assets/: level1.txt
distribution/: README.md
latest/base/: rb_log.c  rb_platform.h
latest/engine3d/: rb_engine.cpp  rb_engine.hpp  rb_file.cpp
latest/game/: game_vexxon.cpp
latest/game/assets/: level1.txt
latest/playground/: CMakeLists.txt
latest/playground/src/: platform_mac.c  platform_win.c  rb_sdl.cpp
newsletter_3/: rb_level.h
newsletter_4/: rb_vector.h  vexxon.c
newsletter_4_sideletter/: rb_draw3d.c  rb_math.c  rb_primitive.h
src/: Makefile  rb_draw.c  rb_draw3d.h  rb_engine.c  rb_engine.h  rb_graphics.c  rb_input.c  rb_input.h  rb_keys.h  rb_level.c  rb_math.c  rb_pitrex.c  rb_pitrex.h  rb_pitrex_window.c  rb_pitrex_window.h  vexxon.c
src/base/: rb_base.h  rb_keys.h  rb_log.c  rb_log.h
src/engine/: rb_draw.c  rb_draw3d.h  rb_engine.c  rb_engine.h  rb_graphics.c  rb_input.h  rb_level.c  rb_math.c  rb_math.h  rb_platform.c  rb_platform.h  rb_sdl.c  rb_vector.c  rb_vtext.c  rb_vtext.h
src/engine3d/: rb_engine.cpp  rb_engine.hpp  rb_file.hpp  rb_level.hpp  rb_math.cpp  rb_math.hpp  rb_mesh.cpp  rb_object.cpp  rb_object.hpp  rb_types.hpp
src/game/: game_vexxon.cpp  vexxon.c
src/pitrex/: Makefile  rb_pitrex_main.cpp  rb_pitrex_platform.c  rb_pitrex_platform.h
src/playground/: CMakeLists.txt
src_newsletter_3/: rb_base.h  rb_draw.c  rb_graphics.h  rb_pitrex.c  rb_primitive.c
src_newsletter_4/: rb_engine.h  rb_math.h  rb_sdl.h  rb_vtext.c  rb_vtext.h
